# gpu-voxels

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  gpu-voxels.sln  vcpkg-configuration.json  vcpkg.json
script/: CMakeLists.txt
vs_proj/: example.vcxproj  example.vcxproj.filters  gpu-visualization.vcxproj  gpu-visualization.vcxproj.filters  gpu-voxels.vcxproj  gpu-voxels.vcxproj.filters  grpc_server.vcxproj  grpc_server.vcxproj.filters  icl_core.vcxproj  icl_core.vcxproj.filters
